force-v4s/main/default/objects/Volunteers_Settings__c/fields/Contact_Match_First_Name_Fields__c.field-meta.xml
<CustomField>
    <fullName>Contact_Match_First_Name_Fields__c</fullName>
    <inlineHelpText>A semicolon separated list of additional Contact first name fields to try to match against when doing Contact matching. E.g., a nickname field.  Note that the fields are specified by their full Developer name, including namespace prefix.</inlineHelpText>
    <label>Contact Match First Name Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>