force-v4s/main/default/objects/Volunteers_Settings__c/fields/Contact_Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>Contact_Matching_Rule__c</fullName>
    <defaultValue>"Firstname;Lastname;Email"</defaultValue>
    <description>Specifies which rule to follow when trying to match Contacts against existing Contacts from the Volunteers Sites pages. Semicolon separated string containing one or more of the fields Firstname, Lastname, and Email.</description>
    <inlineHelpText>Specifies which rule to follow when trying to match Contacts against existing Contacts from the Volunteers Sites pages. Semicolon separated string containing one or more of the fields Firstname, Lastname, and Email.</inlineHelpText>
    <label>Contact Matching Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>