force-v4s/main/default/objects/Volunteers_Settings__c/fields/Default_Login_PersonalSite_Page__c.field-meta.xml
<CustomField>
    <fullName>Default_Login_PersonalSite_Page__c</fullName>
    <length>50</length>
    <inlineHelpText>Which page should load after a volunteer logs in</inlineHelpText>
    <label>Default Login PersonalSite Page</label>
    <type>Text</type>
</CustomField>