force-v4s/main/default/objects/Volunteers_Settings__c/fields/Google_Maps_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_API_Key__c</fullName>
    <inlineHelpText>If you include a Google Maps API Key, the JobListing pages will display a map on your volunteers site for the Job Location.</inlineHelpText>
    <label>Google Maps API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>