force-v4s/main/default/objects/Volunteers_Settings__c/fields/Personal_Site_Edit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Personal_Site_Edit_Hours__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Leave this box checked if you want your volunteers to be able to specify and edit their hour entries</description>
    <label>Personal Site Edit Hours</label>
    <type>Checkbox</type>
</CustomField>