force-v4s/main/default/objects/Volunteers_Settings__c/fields/Personal_Site_Filter_Todays_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Personal_Site_Filter_Todays_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set, will limit the volunteer to only edit jobs with shifts that occur within the same day as the user</description>
    <label>Personal Site Filter Todays Jobs</label>
    <type>Checkbox</type>
</CustomField>