force-v4s/main/default/objects/Volunteers_Settings__c/fields/Personal_Site_Org_Wide_Email_Name__c.field-meta.xml
<CustomField>
    <fullName>Personal_Site_Org_Wide_Email_Name__c</fullName>
    <inlineHelpText>The Display Name of the Organization-Wide Email Address to use on the email sent from the PersonalSiteContactLookup Sites page.</inlineHelpText>
    <label>Personal Site Org-Wide Email Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>