force-v4s/main/default/objects/Volunteers_Settings__c/fields/Personal_Site_Requires_URL_Email_Match__c.field-meta.xml
<CustomField>
    <fullName>Personal_Site_Requires_URL_Email_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then the Personal Site requires the Email URL parameter is included and matches an Email field on the specified Contact.</description>
    <inlineHelpText>If checked, then the Personal Site requires the Email URL parameter is included and matches an Email field on the specified Contact.</inlineHelpText>
    <label>Personal Site Requires URL Email Match</label>
    <type>Checkbox</type>
</CustomField>