force-v4s/main/default/objects/Volunteers_Settings__c/fields/Recurring_Job_Future_Months__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Job_Future_Months__c</fullName>
    <defaultValue>4</defaultValue>
    <description>How many months into the future should Recurring Job Shifts be scheduled?  If this number is too large, you may run into Salesforce CPU time limits which will prevent the Job Scheduler from running completely.  It is recommended to use 4 months or less.</description>
    <inlineHelpText>How many months into the future should Recurring Job Shifts be scheduled?  If this number is too large, you may run into Salesforce CPU time limits which will prevent the Job Scheduler from running completely.  It is recommended to use 4 months or less.</inlineHelpText>
    <label>Recurring Job Future Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>