force-v4s/main/default/objects/Volunteers_Settings__c/fields/Signup_Bucket_Account_On_Create__c.field-meta.xml
<CustomField>
    <fullName>Signup_Bucket_Account_On_Create__c</fullName>
    <inlineHelpText>The name of the account to use when creating new Contacts during Signup.  If you are using the Non Profit Start Pack One-to-One model, leave this setting blank.  If you are using the bucket model, set this to the name of the account; usually &#39;Individual&#39;.</inlineHelpText>
    <label>Signup Bucket Account On Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>