force-v4s/main/default/objects/Volunteers_Settings__c/fields/Signup_Creates_Contacts_If_No_Match__c.field-meta.xml
<CustomField>
    <fullName>Signup_Creates_Contacts_If_No_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should the Volunteer Signup form create new Contact records, if no existing contact is found (or Signup Matches Existing Contacts is unchecked).  If this setting is unchecked, it will create Leads when no matches found.</inlineHelpText>
    <label>Signup Creates Contacts If No Match</label>
    <type>Checkbox</type>
</CustomField>