force-v4s/main/default/objects/Volunteers_Settings__c/fields/Signup_Matches_Existing_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Signup_Matches_Existing_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should the Volunteer Signup page try to match the person to an existing Contact (by First Name, Last Name, Email).</inlineHelpText>
    <label>Signup Matches Existing Contacts</label>
    <type>Checkbox</type>
</CustomField>